# alica-message-capnps

./: CMakeLists.txt  README.md
proto/: RoleSwitch.capnp  SyncTalk.capnp
src/alica_msgs/: AlicaEngineInfo.capnp.c++  AlicaEngineInfo.capnp.h  AllocationAuthorityInfo.capnp.c++  AllocationAuthorityInfo.capnp.h  PlanTreeInfo.capnp.c++  PlanTreeInfo.capnp.h  RoleSwitch.capnp.c++  RoleSwitch.capnp.h  SolverResult.capnp.c++  SolverResult.capnp.h  SyncReady.capnp.c++  SyncReady.capnp.h  SyncTalk.capnp.c++  SyncTalk.capnp.h
src/capnzero/: ID.capnp.c++  ID.capnp.h
